welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: value && is not a member of Int
	if(a%3 && a%5)
               ^fizzBuzz:5: error: type mismatch;
 found   : Int
 required: Boolean
	else if(a%3)
                 ^fizzBuzz:7: error: type mismatch;
 found   : Int
 required: Boolean
	else if(a%5)
                 ^